fixed form alignment

--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,10 @@ carousel-slide {
     background-size:     cover;
 }
 
-.cognito {
-    margin-left: 150px;
-    text-align: center;
-}
 
 .cognito .c-forms-form .c-forms-form-title h2 {
     font-family: 'Open Sans Condensed',Helvetica,sans-serif;
-    font-size: 20px;
+    font-size: 30px;
     color: #000000;
     line-height: 1.15em;
     text-align: center;
@@ -30,9 +26,23 @@ carousel-slide {
 .cognito .c-forms-form .c-forms-description {
     color: #000000;
     font-family: Arial,Helvetica,sans-serif;
-    font-size: 17px;
+    font-size: 20px;
     text-align: center;
 }
+
+.cognito {
+    text-align:center;
+}
+
+.cognito #c-forms-form{
+    display:inline-block;
+}
+
+.cognito .c-field {
+    text-align:left;
+    min-width:300px;
+}
+
 .pgraph {
     text-align: justify;
     font-size: 20px;
@@ -120,7 +130,7 @@ Header
 .jumbotron
 {
     background-color: transparent;
-    padding-top: 90px;
+    /* padding-top: 90px; */
 }
 .jumbotron p.big
 {
